style.css
body {
  margin: 0;
  background-color: #131313;
  font-family: "Poppins", sans-serif;
  color: #fff;
}

/* NAVBAR */
.navbar {
  display: flex;
  justify-content: space-between;
  align-items: center;
  width: 1222px;
  margin: 0 auto;
  height: 192px;
}

.nav-left,
.nav-right {
  display: flex;
  gap: 50px;
}

.nav-left a,
.nav-right a {
  color: #fff;
  font-size: 20px;
  font-weight: 500;
  text-decoration: none;
}

/* LOGO */
.nav-logo {
  font-size: 40px;
  font-weight: 600;
  background: linear-gradient(90deg, #fff 0%, #14ffec 100%);
  background-clip: text;
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}

/* HERO IMAGE */
.hero {
  display: flex;
  justify-content: center;
}

.hero-image {
  width: 1473px;
  height: 675px;
  object-fit: cover;
  aspect-ratio: 491 / 225;
}

/* LINEUP SECTION */
.lineup {
  width: 100%;
  height: 180px;
  background-color: #00b7ad;
  overflow: hidden;
  position: relative;
  align-items: center;
  display: flex;
  justify-content: center;
}

.lineup-text {
  display: inline-flex;
  gap: 72px;
  font-size: 48px;
  font-weight: 600;
  white-space: nowrap;
  color: #131313;
  animation: scrollLineup 15s linear infinite;
}

/* Animasi geser ke kiri */
@keyframes scrollLineup {
  0% {
    transform: translateX(100%);
  }
  100% {
    transform: translateX(-100%);
  }
}

